更新登录页

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>快餐管理系统</title>
   <link rel="stylesheet" href="http://at.alicdn.com/t/font_wyhhdpv5lhvbzkt9.css">
+  <link rel="stylesheet" href="http://at.alicdn.com/t/font_508090_dpfc9t94uzwljtt9.css">
   <style>
     html,body,#app {
       height :100%;
